--- a/css/components/menu-braven.css
+++ b/css/components/menu-braven.css
@@ -8,19 +8,41 @@
 }
 
 .menu-braven > .items{
+    box-sizing: border-box;
     position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
     height: 100vh;
     background-color: var(--color-negative-light);
+    padding: var(--spacing-container-top) var(--spacing-container-right) 
+    var(--spacing-container-bottom) var(--spacing-container-left);
 }
 
 .menu-braven .close {
     width: 42px;
     height: 42px;
+    line-height: 42px;
     border-radius: 50%;
     border: 4px solid var(--color-zero);
-    margin-left: 25px;
-    margin-top: 32px;
+    color: var(--color-zero);
+    font-size: 1.235em;
+    text-align: center;
+    cursor: pointer;
+    margin-bottom: 2.352em;
+}
+
+.menu-braven .action{
+    color: var(--color-zero);
+    text-decoration: none;
+    font-weight: normal;    
+}
+
+.menu-braven .item{
+    margin-left: var(--spacing-very-small);
+}
+
+.menu-braven .item:not(:last-child){
+    margin-bottom: 2.352em;
+    
 }
