--- a/css/objects/container-braven.css
+++ b/css/objects/container-braven.css
@@ -1,13 +1,9 @@
 .container-braven{
-    background-image: url('../../img/bg.png');
+    background: url('../../img/bg.png') no-repeat -250px 0;
     background-size: auto 100%;
-    background-position: -200px 0;
-    background-repeat: no-repeat;
     box-sizing: border-box;
     height: 100%;
     font-weight: bold;
-    padding-top: 7.389vh;
-    padding-left: 9.6vw;
-    padding-right: 9.6vw;
-    padding-bottom: 2.709vh;
+    padding: var(--spacing-container-top) var(--spacing-container-right) 
+    var(--spacing-container-bottom) var(--spacing-container-left);
 }
